<resources>
    <string name="app_name">Proj1_ETr65856</string>
    <string name="addTv">Add New Patient</string>
    <string name="addFNameTv">*First Name:</string>
    <string name="addSID">Schedule ID to Remove</string>
    <string name="userAddFName">John</string>
    <string name="addBdTv">*Date Of Birth:</string>
    <string name="userAddBd">(MM/DD/YYYY)</string>
    <string name="addRDateTv">Register Date:</string>
    <string name="userAddRDate">(MM/DD/YYYY)</string>
    <string name="addPhoneTv">*Phone Number:</string>
    <string name="userAddPhone">(XXX) - XXX - XXXX</string>
    <string name="s_type">General Checkup</string>
    <string name="addEContact">*Emergency Contact:</string>
    <string name="userAddEContact">(XXX) - XXX - XXXX</string>
    <string name="addEmailTv">E-Mail:</string>
    <string name="userAddEmail">john@email.com</string>
    <string name="addLNameTv">*Last Name:</string>
    <string name="userAddLName">Doe</string>
    <string name="addBt">ADD</string>
    <string name="addGenderTv">Gender:</string>
    <string name="userAddGender">(F/M/Others)</string>
    <string name="medTrackTv">Medication Tracking</string>
    <string name="medAddBtn">Add</string>
    <string name="medRemoveBtn">Remove</string>
    <string name="pillsNameTv">*Pills Name:</string>
    <string name="amountTv">*Amount:</string>
    <string name="durationTv">*Duration:</string>
    <string name="userAddPillsName">Enter the pills name</string>
    <string name="userAddAmount">Enter amount</string>
    <string name="userAddDuration">Enter duration</string>

    <string name="reason">Consultation Reason</string>
    <string name="consulDate">Consultation Date</string>
    <string name="patientName">Patient Name</string>
    <string name="consulNamepage">Consultation History</string>
    <string name="UpdateBtn">Update</string>
    <string name="CancelBtn">Cancel</string>
    <string name="header">Patient Information</string>
    <string name="firstNameLabel">First Name:</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="dobLabel">Date of Birth:</string>
    <string name="genderLabel">Gender:</string>
    <string name="phoneNumberLabel">Phone Number:</string>
    <string name="emailLabel">E-mail (optional):</string>
    <string name="emergencyContactLabel">Emergency Contact:</string>
    <string name="description">Medical Tools</string>
    <string name="tvTitle">Health Connect</string>
    <string name="ColID">Col ID:</string>
    <string name="adddiagnosis">Cough</string>
    <string name="addtreatment">Humidifier,etc.</string>
    <string name="colAddBtn">Add</string>


    <string name="btAdd" translatable="false">"Add "</string>
    <string name="btSchedule">Schedule</string>
    <string name="tvPatientName">Name</string>
    <string name="tvPatientSex">Sex</string>
    <string name="btSave">Save</string>
    <string name="addSTv">Schedule New Appointment</string>
    <string name="addDateTv">*Date:</string>
    <string name="addTimeTv">*TIme:</string>
    <string name="addNoteTv">Note:</string>
    <string name="userAddNote">Details</string>
    <string name="userAddTime">00:00</string>
    <string name="diagnosis">Diagnosis:</string>
    <string name="treatment">Treatment:</string>
    <string name="selectDate">Select a Date</string>

    <string name="reminder">Reminder - Upcoming appointments</string>
    <string name="ScheBtn">Add/Remove</string>
    <string name="btnHome">home button</string>
    <string name="descriptionHome">image of home</string>
    <string name="btnJoker" translatable="false">Joke</string>
    <string name="descriptionJoker">image of joker</string>
    <string name="ivJokesDescription">image of jokes</string>

    <string name="weightCalTv">Weight Calculator</string>
    <string name="userAddW">Patient Weight</string>
    <string name="userAddH">Patient Height</string>
    <string name="calculateBt">Calculate</string>
    <string name="tvResult">Result of calculated data</string>
    <string name="rbLbToKilo">Convert Pounds to Kilograms</string>
    <string name="rbKiloToLb">Convert Kilograms to Pounds</string>
    <string name="rbBMI">Calculate BMI</string>
    <string name="btWeight">Weight</string>

    <string name="ViewBtn">View</string>
    <string name="MedicalTrackBtn">Medical Track</string>
    <string name="ConsultationHisBtn">Consultation</string>

    <string name="MedID">Med ID:</string>
    <string name="patientPhoneNumber">Phone #:</string>
    <string name="medName">Med Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="date">Date:</string>
    <string name="duration">Duration:</string>
    <string name="editTextMedID">ID # To Remove</string>
    <string name="editTextPName">Add Patient Name</string>
    <string name="editTextPhoneNumber">Add Patient Phone Number</string>
    <string name="editTextMedName">Add Medication Name</string>
    <string name="editTextQuantity">Add Quantity</string>
    <string name="editTextDate">(MM/DD/YYYY)</string>
    <string name="editTextDuration">Add Duration</string>

</resources>