<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="8dp"
    android:background="@color/material_dynamic_primary95"
    android:padding="8dp">

    <TextView
        android:id="@+id/textPatientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patientName"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textConsultationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consulDate"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/conSuldiagnosis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis"
        android:textColor="#1B5E20"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/conSultreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/treatment"
        android:textColor="#1B5E20"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#E0E0E0" />
</LinearLayout>
